# gaia-benchmark

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
artifacts/conversations/: 2764afd7-bf41-4c04-b350-8368ca6198a4.jsonl  9fb98b18-9701-4656-abe0-b079c3cf427d.jsonl  README.md  ad58f48b-3f68-489e-b208-f245be994300.jsonl  f76dfd01-f3da-410b-8cf2-008b80086aa0.jsonl
artifacts/results/20260316T214520230195Z/: 00d579ea-0889-4fd9-a771-2c8d79835c8d.json  023e9d44-96ae-4eed-b912-244ee8c3b994.json  0383a3ee-47a7-41a4-b493-519bdefe0488.json  04a04a9b-226c-43fd-b319-d5e89743676f.json  0512426f-4d28-49f0-be77-06d05daec096.json  05407167-39ec-4d3a-a234-73a9120c325d.json  076c8171-9b3b-49b9-a477-244d2a532826.json  08c0b6e9-1b43-4c2e-ae55-4e3fce2c2715.json  08cae58d-4084-4616-b6dd-dd6534e4825b.json  08f3a05f-5947-4089-a4c4-d4bcfaa6b7a0.json  0a3cd321-3e76-4622-911b-0fda2e5d6b1a.json  (+156 more)
docs/: README.md  architecture.md  benchmarking.md  repo-layout.md  submission-checklist.md
skills/: README.md
skills/gaia-benchmark-ops/: SKILL.md
skills/gaia-failure-triage/: SKILL.md
src/gaia_bot/: __init__.py  agent.py  artifacts.py  basemodels.py  benchmark.py  compare_runs.py  eval.py  executor.py  export_submission.py  models.py  prompts.py  research.py  results.py  router.py  run.py  scoring.py  settings.py  smoke.py
tests/: conftest.py  test_artifacts.py  test_benchmark.py  test_executor.py  test_results.py  test_router.py  test_scoring.py  test_settings.py  test_submission.py
tests/fixtures/: gaia_sample.jsonl
tests/integration/: test_services.py
(+30 files in other folders)
