[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "gaia-bot"
version = "0.1.0"
description = "GAIA benchmark agent baseline built on Anthropic's Claude Agent SDK and E2B."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Abdulmunim Jemal", email = "abdulmunimjemal@gmail.com" },
]
dependencies = [
  "anthropic>=0.84.0,<0.85.0",
  "beautifulsoup4>=4.13.4,<5.0.0",
  "claude-agent-sdk>=0.1.48,<0.2.0",
  "datasets>=4.1.1,<5.0.0",
  "ddgs>=9.6.1,<10.0.0",
  "e2b-code-interpreter>=2.4.1,<3.0.0",
  "httpx>=0.28.1,<0.29.0",
  "pydantic>=2.11.3,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "pypdf>=6.0.0,<7.0.0",
  "tenacity>=9.1.2,<10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "ruff>=0.11.4,<0.12.0",
]
eval = []

[tool.hatch.build.targets.wheel]
packages = ["src/gaia_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "integration: marks tests that require live Anthropic and E2B credentials",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
